--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.servlet.contextPath=/devcar
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/devcar
-spring.datasource.username=usermysql
-spring.datasource.password=cursomysql
+spring.datasource.url=jdbc:mysql://localhost:3306/devcar
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
